# Exam-Platform

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
app/: globals.css
backend/Team3/: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  e2e_config_test.py  pyproject.toml  pyrightconfig.json  requirements.txt
backend/Team3/app/: __init__.py  main.py
backend/Team3/app/api/routes/: candidate_access.py  exam_config.py  execution.py  proctoring.py  result_release.py  sessions.py
backend/Team3/app/api/v1/: api.py
backend/Team3/app/core/: __init__.py  config.py  db.py  exceptions.py  security.py
backend/Team3/app/models/: __init__.py  base.py  certificate.py  exam_session.py  exams_candidate_access.py  exams_configuration.py  exams_invited_candidate.py  exams_proctoring_config.py  exams_proctoring_flag.py  exams_result_release.py  exams_section.py  exams_section_question.py  result.py  submission.py
backend/Team3/app/schemas/: __init__.py  autosave.py  candidate_access.py  exam_config.py  exam_section.py  judge0.py  proctoring.py  result.py  result_release.py  session.py
backend/Team3/app/services/: __init__.py  access_service.py  exam_config_service.py  judge0.py  lock_service.py  proctoring_service.py  result_release_service.py  scoring.py  session.py
backend/Team3/docs/design/: DESIGN.md
backend/Team3/src/exams/: config.py  dependencies.py  main.py
backend/Team3/src/exams/models/: __init__.py
backend/Team3/src/exams/schemas/: exam_config.py  session.py
backend/Team3/src/exams/services/: session.py
backend/Team3/tests/: conftest.py
(+144 files in other folders)
